# myapi

./: pyproject.toml
config/: settings.py  urls.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_tasks_task.py
